--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>the AKG Design Collective</title>
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="resources/images/akg-logo-fav.ico" type="image/x-icon">
   </head>
   <body>
     <div class="bkgcontainer">
