--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="resources/images/akg-logo-fav.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600|Raleway:400,600" rel="stylesheet">
   </head>
   <body>
     <div class="bkgcontainer">
