--- a/philo.html
+++ b/philo.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128667970-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-128667970-1');
-</script>
-
     <meta charset="utf-8">
-    <title>the AKG Design Collective</title>
+    <title>the AKG Design Collective ~ Philosophy</title>
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="resources/images/akg-logo-fav.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600|Raleway:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab+Highlight:400,700" rel="stylesheet">
   </head>
+
   <body>
     <div class="bkgcontainer">
       <header>
@@ -33,9 +24,7 @@
           <li><a href="#">Contact<a/></li>
         </ul>
       </nav>
-      <article class="latest-news">
-        <h2>arriving soon</h2>
-      </article>
+        <h3>Philosophy</h3>
     </div>
 
   </body>
