responsive design update

--- a/index.html
+++ b/index.html
@@ -11,32 +11,39 @@
   gtag('config', 'UA-128667970-1');
 </script>
 
-    <meta charset="utf-8">
+<!--required meta tags-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+
+
     <title>the AKG Design Collective</title>
+
+    <!--reset stylesheet to remove pre-installed browser style settings-->
     <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
+    <!--custom stylesheet-->
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+    <!--favicon-->
     <link rel="icon" href="resources/images/akg-logo-fav.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600|Raleway:400,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab+Highlight:400,700" rel="stylesheet">
+
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway:400,500" rel="stylesheet">
+
+
   </head>
   <body>
-    <div class="bkgcontainer">
-      <header>
-        <h1>the AKG Design Collective</h1>
-      </header>
-      <nav>
-        <ul>
-          <li><a href="philo.html">Philosophy</a></li>
-          <li><a href="#">Mission</a></li>
-          <li><a href="#">Photography</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact<a/></li>
-        </ul>
-      </nav>
-      <article class="latest-news">
-        <h2>arriving soon</h2>
-      </article>
-    </div>
-
+    <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">the AKG Design Collective</h1>
+    <p class="lead">Arriving Soon</p>
+  </div>
+</div>
+    <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
 </html>
