--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
 
 
@@ -35,11 +36,26 @@
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">the AKG Design Collective</h1>
-    <p class="lead">Arriving Soon</p>
-  </div>
-</div>
+      <div class="container">
+        <h1 class="display-4">the <span>AK</span>G Design Collective</h1>
+        <p class="lead">Arriving Soon</p>
+      </div>
+    </div>
+    <div class="img-container">
+    </div>
+    <div class="grid-container">
+      <div class="grid-item">Web</div>
+      <div class="grid-item">Photography</div>
+      <div class="grid-item">Writing</div>
+      <div class="grid-item">Art</div>
+    </div>
+    <div class="img-container">
+    </div>
+    <footer>
+      <div class="copywrite">
+        <p>&#169; 2019 the <span>AK</span>G design collective</p>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
