responsive design add

--- a/index.html
+++ b/index.html
@@ -41,16 +41,13 @@
         <p class="lead">Arriving Soon</p>
       </div>
     </div>
-    <div class="img-container">
+    <div class="services-container">
+      <div class="services">Web</div>
+      <div class="services">Photography</div>
+      <div class="services">Writing</div>
+      <div class="services">Art</div>
     </div>
-    <div class="grid-container">
-      <div class="grid-item">Web</div>
-      <div class="grid-item">Photography</div>
-      <div class="grid-item">Writing</div>
-      <div class="grid-item">Art</div>
-    </div>
-    <div class="img-container">
-    </div>
+
     <footer>
       <div class="copywrite">
         <p>&#169; 2019 the <span>AK</span>G design collective</p>
